--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -25,7 +25,7 @@ html, body {
 }
 .info-title {
     min-height: 100px;
-    background-color: #346B7D;
+    background-color: #4475AA;
     padding-top: 15px;
     font-size: 43px;
     /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
@@ -44,13 +44,13 @@ html, body {
     width: 735px;
     height: 600px;
     border-right: 2px solid black;
-    background-color: #A7E695;
+    background-color: #215681;
 }
 .content-right {
     padding: 0;
     width: 451px;
     height: 600px;
-    background-color: #A7E695;
+    background-color: #215681;
 }
 
 .footer {
