--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -3,7 +3,7 @@ html, body {
   /*  height: 100%;*/
     font-family: Helvetica, sans-serif;
     font-size: 15px;
-    line-height: 200%;
+    /*line-height: 200%;*/
 }
 
 .container {
@@ -16,17 +16,23 @@ html, body {
 }
 
 .wrap {
-    width: 1186px;
+    width: 1188px;
     margin: 0 auto;
 }
 .nav {
     height: 50px;
     background-color: #1C2A3B;
 }
-.info-title {
-    min-height: 100px;
+.banner-conftainer {
+    min-height: 300px;
+    width: 1188px;
+}
+#image-banner {
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
     background-color: #4475AA;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
     font-size: 43px;
     /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
     text-shadow: 1px 1px 3px rgba(255,255,255, .5);
@@ -48,7 +54,7 @@ html, body {
 }
 .content-right {
     padding: 0;
-    width: 451px;
+    width: 453px;
     height: 600px;
     background-color: #215681;
 }
@@ -63,4 +69,50 @@ html, body {
     margin-bottom: 0px;
     background-color: rgba(7, 95, 69, 100);
     box-shadow: 0 -65px 140px #D1FF99;
+}
+
+/*
+    TODO: move this to artist.css
+*/
+
+.tile-wrapper {
+    margin: 0;
+    padding: 0;
+
+    width: 297px;
+    max-width: 297px;
+    height: 300px;
+    max-height: 300px;
+
+    overflow: hidden;
+    float: left;
+    background-color: white;
+
+}
+
+.tile-image {
+    opacity: .7;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+#banner-title {
+    width: 1188px;
+    max-width: 1188px;
+    height: 50px;
+    position: absolute;
+    z-index: 1;
+    top: 270px;
+    padding: 0;
+    margin: 0;
+}
+
+#name {
+    padding: 0;
+    margin: 0;
+    font-size: 43px;
+    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
+    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
+    text-align: left;
+    text-indent: 30px;
+    background-image: url("/static/img/banner-text-bg.png");
 }
