--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,6 +1,6 @@
 html, body {
     color: white;
-  /*  height: 100%;*/
+    /*min-height: 100%;*/
     font-family: Helvetica, sans-serif;
     font-size: 15px;
     /*line-height: 200%;*/
@@ -11,40 +11,37 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
-    background-color: #FEF2CD;
+    /*background-color: #FEF2CD;*/
+
+    background-color: #215681;
     text-align: center;
 }
 
 .wrap {
     width: 1188px;
+    height: 100%;
+    min-height: 100%;
     margin: 0 auto;
 }
 .nav {
     height: 50px;
     background-color: #1C2A3B;
 }
-.banner-conftainer {
+/*what is this*/
+/*.banner-conftainer {
     min-height: 300px;
     width: 1188px;
-}
-#image-banner {
-    width: 100%;
-    height: 300px;
-    min-height: 300px;
-    background-color: #4475AA;
-    /*padding-top: 15px;*/
-    font-size: 43px;
-    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-}
+}*/
 
 .row {
     margin: 0;
 }
 .content {
-    height: 600px;
+    /*height: 600px;*/
     /*background-color: #A7E695;*/
     background-color: #215681;
+    height: 100%;
+    min-height: 100%;
 }
 
 .footer {
@@ -58,119 +55,4 @@ html, body {
     background-color: rgba(7, 95, 69, 100);
     box-shadow: 0 -65px 140px #D1FF99;
 }
-
-/*
-    TODO: move this to artist.css
-*/
-
-.tile-wrapper {
-    margin: 0;
-    padding: 0;
-
-    width: 297px;
-    max-width: 297px;
-    height: 300px;
-    max-height: 300px;
-
-    overflow: hidden;
-    float: left;
-    background-color: white;
-}
-
-.tile-image {
-    opacity: .7;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-}
-
-#banner-title {
-    width: 1188px;
-    max-width: 1188px;
-    height: 50px;
-    position: absolute;
-    z-index: 1;
-    top: 270px;
-    padding: 0;
-    margin: 0;
-}
-
-#name {
-    padding: 0;
-    margin: 0;
-    font-size: 43px;
-    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-    text-align: left;
-    text-indent: 30px;
-    color: white;
-    background-color: #1C2A3B;
-}
-
-.separator {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 15px;
-    background-color: #1C2A3B;
-}
-
-.rating-box {
-    border-right: 15px solid #1C2A3B;
-    height: 115px;
-    padding-top: 14px;
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-}
-
-.bio-box {
-    height: 115px;
-    padding: 15px;
-    text-align: left;
-    text-indent: 15px;
-}
-
-.artist-hint {
-    font-size: 43px;
-    content: "A representation of how popular an artist or song is.";
-    /*border-bottom: 1px white dotted;*/
-    cursor: help;
-}
-
-.song-content{
-    padding: 0;
-    width: 735px;
-    height: 600px;
-    border-right: 15px solid #1C2A3B;
-    background-color: #215681;
-}
-.similar-content {
-    padding: 0;
-    width: 453px;
-    height: 600px;
-    background-color: #215681;
-}
-
-.glyphicon {
-    font-size: 30px;
-    padding-right: 10px
-}
-
-.rank {
-    font-size: 15px;
-}
-
-.row-even {
-    background-color: #4475AA;
-
-}
-.row-odd {
-    background-color: #215681;
-}
-
-table#song-table td, tr {
-    border-color: #1C2A3B;
-}
-
-
-
-
-
 
