--- a/static/css/artist.css
+++ b/static/css/artist.css
@@ -23,8 +23,8 @@
 }
 
 .tile-image {
-    opacity: .7;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
+    /*opacity: .90;*/
+    /*filter: alpha(opacity=100); /* For IE8 and earlier */*/
 }
 
 #banner-title {
@@ -47,14 +47,6 @@
     text-align: left;
     text-indent: 30px;
     color: white;
-    background-color: #1C2A3B;
-}
-
-.separator {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 15px;
     background-color: #1C2A3B;
 }
 
@@ -176,3 +168,33 @@ table.preview-songs-table th {
     text-shadow: 1px 1px 1px rgba(255,255,255, .3);
     font-size: 20px;
 }
+
+.separator {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 15px;
+    background-color: #215681;
+    /*background-color: #1C2A3B;*/
+}
+
+.banner-container {
+    background-color: #215681;
+    /*background-color: #1C2A3B;*/
+}
+
+.artist-brief-info {
+    background-color: #1C2A3B;
+    /*background-color: #215681;*/
+    height: 100%;
+    min-height: 100%;
+}
+
+.recommended-content {
+    background-color: #215681;
+    /*background-color: #1C2A3B;*/
+    height: 100%;
+    min-height: 100%;
+}
+
+
