--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -13,7 +13,7 @@ html, body {
     margin: 0;
     /*background-color: #FEF2CD;*/
 
-    background-color: #215681;
+    /*background-color: #215681;*/
     text-align: center;
 }
 
@@ -23,10 +23,7 @@ html, body {
     min-height: 100%;
     margin: 0 auto;
 }
-.nav {
-    height: 50px;
-    background-color: #1C2A3B;
-}
+
 /*what is this*/
 /*.banner-conftainer {
     min-height: 300px;
@@ -54,5 +51,65 @@ html, body {
     margin-bottom: 0px;
     background-color: rgba(7, 95, 69, 100);
     box-shadow: 0 -65px 140px #D1FF99;
+}
+
+/*.separator {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 15px;
+    background-color: #1C2A3B;
+}*/
+
+/*TODO: combine like elements*/
+.nav {
+    height: 54px;
+    background-color: #1C2A3B;
+}
+#nav-home-icon {
+    width: 54px;
+    margin-left: 8px;
+    padding-top: 14px;
+}
+#nav-title {
+    width: 180px;
+    font-size: 25px;
+    padding-top: 12px;
+    padding-right: 0;
+    padding-left: 0;
+    /*text-align: right;*/
+}
+#nav-search {
+    padding-top: 14px;
+    padding-left: 10px;
+    text-align: left;
+}
+#nav-about {
+    height: 100%;
+    padding-top: 14px;
+    font-size: 25px;
+    text-align: center;
+    float:right;
+    border-right: 1px solid white;
+}
+#nav-contact {
+    height: 100%;
+    padding-top: 14px;
+    font-size: 25px;
+    text-align: center;
+    float:right;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+.search-bar {
+    color: black;
+    width: 220px;
+}
+.nav-content-separator {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 2px;
+    background-color: white;
 }
 
