added basic index and result page

--- a/templates/artist.html
+++ b/templates/artist.html
@@ -45,8 +45,6 @@
         </div>
     </div>
 
-    <div class="nav-content-separator"></div>
-
     <div class="banner-container">
     <div class="wrap">
         <div class="separator"></div>
@@ -198,6 +196,7 @@
 
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
 <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+<script src="{{ STATIC_URL }}js/ajax-loader.js"></script>
 <script src="{{ STATIC_URL }}js/artist-utils.js"></script>
 
 {% if not profile %}
