--- a/static/css/artist.css
+++ b/static/css/artist.css
@@ -92,27 +92,11 @@
     background-color: #215681;
 }
 
-.glyphicon {
-    font-size: 30px;
-    padding-right: 10px
-}
-
 .rank {
     font-size: 15px;
 }
 
-.row-even {
-    background-color: #4475AA;
-}
-.row-odd {
-    background-color: #215681;
-}
 
-
-table td, tr {
-    border: none !important;
-    text-align: left;
-}
 
 #song-table {
     margin: 0 auto;
@@ -169,14 +153,7 @@ table.preview-songs-table th {
     font-size: 20px;
 }
 
-.separator {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 15px;
-    background-color: #215681;
-    /*background-color: #1C2A3B;*/
-}
+
 
 .banner-container {
     background-color: #215681;
@@ -186,8 +163,8 @@ table.preview-songs-table th {
 .artist-brief-info {
     background-color: #1C2A3B;
     /*background-color: #215681;*/
-    height: 100%;
-    min-height: 100%;
+/*    height: 100%;
+    min-height: 100%;*/
 }
 
 .recommended-content {
