--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,13 +1,16 @@
 html, body {
     color: white;
-    /*min-height: 100%;*/
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
     font-family: Helvetica, sans-serif;
     font-size: 15px;
-    /*line-height: 200%;*/
+    background-color: #215681;
 }
 
 .container {
-    height: 100%;
+    /*height: 100%;*/
+    /*min-height: 100%;*/
     width: 100%;
     padding: 0;
     margin: 0;
@@ -65,6 +68,7 @@ html, body {
 .nav {
     height: 54px;
     background-color: #1C2A3B;
+    border-bottom: 2px solid white;
 }
 #nav-home-icon {
     width: 54px;
@@ -90,7 +94,6 @@ html, body {
     font-size: 25px;
     text-align: center;
     float:right;
-    border-right: 1px solid white;
 }
 #nav-contact {
     height: 100%;
@@ -98,12 +101,12 @@ html, body {
     font-size: 25px;
     text-align: center;
     float:right;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
 }
 .search-bar {
     color: black;
-    width: 220px;
+    width: 350px;
 }
 .nav-content-separator {
     padding: 0;
@@ -111,5 +114,62 @@ html, body {
     width: 100%;
     height: 2px;
     background-color: white;
+}
+
+.glyphicon {
+    font-size: 30px;
+    padding-right: 10px
+}
+
+/*TABLE*/
+table td, tr {
+    border: none !important;
+    text-align: left;
+}
+.row-even {
+    background-color: #4475AA;
+}
+.row-odd {
+    background-color: #215681;
+}
+
+
+/* TEXT */
+.content-title {
+    padding: 0;
+    margin: 0;
+    font-size: 43px;
+    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
+    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
+    text-align: left;
+    text-indent: 30px;
+    color: white;
+}
+a {
+    color: white;
+}
+a:hover {
+    color: #BABABA;
+}
+
+.separator {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 15px;
+    background-color: #215681;
+    /*background-color: #1C2A3B;*/
+}
+
+
+/*COLOR*/
+.primec {
+    background-color: #215681;
+}
+.secondc {
+    background-color: #1C2A3B;
+}
+.accentc {
+    background-color: #4475AA;
 }
 
