--- a/templates/artist.html
+++ b/templates/artist.html
@@ -28,7 +28,8 @@
         <span id="nav-home-icon" class="glyphicon glyphicon-music col-lg-1"></span>
 
         <div id="nav-title" class="col-lg-3">
-            audiosearch :: 
+            <a href = "{% url 'src.views.index' %}" >audiosearch</a>
+            ::
         </div>
 
         <div id="nav-search"  class="col-lg-3">
